--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   "author": "Richard Solomou <richard@richardsolomou.com>",
   "main": "./src/index.js",
   "bin": {
-    "bundler": "./src/index.js"
+    "bundler": "./bin/cli.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tronite/bundler.git"
   },
+  "scripts": {
+    "build": "webpack --progress"
+  },
   "dependencies": {
-    "@babel/cli": "^7.0.0-beta.49",
     "@babel/core": "^7.0.0-beta.49",
-    "@babel/preset-env": "^7.0.0-beta.49",
-    "@babel/preset-stage-0": "^7.0.0-beta.49",
     "@tronite/eslint-config": "^1.0.0",
     "babel-eslint": "^8.2.3",
+    "babel-loader": "^8.0.0-beta.3",
+    "chalk": "^2.4.1",
     "dotenv": "^6.0.0",
     "eslint": "^4.19.1",
     "eslint-plugin-import": "^2.12.0",
