--- a/package.json
+++ b/package.json
@@ -16,23 +16,33 @@
     "type": "git",
     "url": "git+https://github.com/tronite/bundler.git"
   },
-  "scripts": {
-    "build": "webpack --progress"
-  },
   "dependencies": {
     "@babel/core": "^7.0.0-beta.49",
+    "@babel/polyfill": "^7.0.0-beta.49",
+    "@babel/preset-env": "^7.0.0-beta.49",
+    "@babel/preset-stage-0": "^7.0.0-beta.49",
+    "@babel/register": "^7.0.0-beta.49",
     "@tronite/eslint-config": "^1.0.0",
+    "autoprefixer": "^8.6.2",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^8.0.0-beta.3",
     "chalk": "^2.4.1",
+    "css-loader": "^0.28.11",
     "dotenv": "^6.0.0",
     "eslint": "^4.19.1",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "lodash": "^4.17.10",
+    "node-sass": "^4.9.0",
     "ora": "^2.1.0",
+    "sass-loader": "^7.0.3",
+    "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.3",
+    "webpack-cli": "^3.0.4",
+    "webpack-node-externals": "^1.7.2",
     "yargs": "^11.0.0"
   }
 }
