--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.4",
+    "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.7.2",
     "yargs": "^11.0.0"
   }
