--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,6 @@
   "rules": {
     "global-require": "off",
     "import/no-dynamic-require": "off",
-    "no-console": "off",
-    "no-mixed-operators": "off"
+    "no-console": "off"
   }
 }
