--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,6 @@
 {
   "extends": "@tronite",
+  "parser": "babel-eslint",
   "rules": {
     "global-require": "off",
     "import/no-dynamic-require": "off",
