--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "json-loader": "^0.5.7",
     "lodash": "^4.17.10",
     "node-sass": "^4.9.0",
     "ora": "^2.1.0",
