--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "json-loader": "^0.5.7",
     "lodash": "^4.17.10",
     "node-sass": "^4.9.0",
+    "npmi": "^4.0.0",
     "ora": "^2.1.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
