--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/tronite/tronic.git"
   },
   "scripts": {
-    "build": "BABEL_TARGET=node babel src -d dist",
+    "build": "babel src -d dist",
     "prepare": "npm run build"
   },
   "dependencies": {
