--- a/package.json
+++ b/package.json
@@ -21,15 +21,12 @@
     "prepare": "npm run build"
   },
   "dependencies": {
-    "@babel/cli": "^7.0.0-beta.51",
     "@babel/core": "^7.0.0-beta.49",
     "@babel/polyfill": "^7.0.0-beta.49",
     "@babel/preset-env": "^7.0.0-beta.49",
     "@babel/preset-stage-0": "^7.0.0-beta.51",
-    "@tronite/eslint-config": "^1.0.0",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^8.0.0-beta.3",
-    "babel-plugin-async-import": "^2.0.1",
     "chalk": "^2.4.1",
     "css-loader": "^0.28.11",
     "dotenv": "^6.0.0",
@@ -40,15 +37,18 @@
     "eslint-plugin-react": "^7.9.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "json-loader": "^0.5.7",
-    "lodash": "^4.17.10",
     "node-sass": "^4.9.0",
     "npmi": "^4.0.0",
     "ora": "^2.1.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
-    "webpack-cli": "^3.0.4",
     "webpack-merge": "^4.1.2",
     "yargs": "^11.0.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.0.0-beta.51",
+    "@tronite/eslint-config": "^1.0.0",
+    "babel-plugin-async-import": "^2.0.1"
   }
 }
