--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,3 @@
 {
-  "presets": [
-    "@babel/preset-env",
-    ["@babel/preset-stage-0", { "decoratorsLegacy": true }]
-  ],
-  "plugins": [
-    "async-import"
-  ]
+  "presets": ["@babel/preset-env"]
 }
