--- a/package.json
+++ b/package.json
@@ -17,27 +17,26 @@
     "url": "git+https://github.com/tronite/tronic.git"
   },
   "scripts": {
-    "build": "babel src -d dist",
-    "prepare": "npm run build"
+    "prepare": "babel src -d dist"
   },
   "dependencies": {
     "chalk": "^2.4.1",
     "dotenv": "^6.0.0",
     "eslint": "^4.19.1",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1",
-    "npmi": "^4.0.0",
     "ora": "^2.1.0",
     "webpack": "^4.12.0",
-    "webpack-merge": "^4.1.2",
+    "webpack-merge": "^4.1.3",
     "yargs": "^11.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
     "@tronite/eslint-config": "^1.0.0",
     "babel-eslint": "^8.2.3",
-    "babel-plugin-async-import": "^2.0.1"
+    "eslint-loader": "^2.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.9.1"
   }
 }
