--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^4.19.1",
     "ora": "^2.1.0",
     "webpack": "^4.12.0",
+    "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.3",
     "yargs": "^11.0.0"
   },
