--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "url": "git+https://github.com/tronite/tronic.git"
   },
   "scripts": {
+    "lint": "eslint src",
     "prepare": "rm -rf dist && babel src -d dist"
   },
   "dependencies": {
     "chalk": "^2.4.1",
     "dotenv": "^6.0.0",
-    "eslint": "^4.19.1",
     "ora": "^2.1.0",
     "webpack": "^4.12.0",
     "webpack-dev-server": "^3.1.4",
@@ -30,11 +30,12 @@
     "yargs": "^11.0.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.51",
-    "@babel/core": "^7.0.0-beta.51",
-    "@babel/preset-env": "^7.0.0-beta.51",
     "@tronite/eslint-config": "^1.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
+    "babel-preset-env": "^1.7.0",
+    "eslint": "^4.19.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
