--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "scripts": {
     "lint": "eslint src",
-    "prepare": "rm -rf dist && babel src -d dist"
+    "prepare": "rm -rf dist && babel src -d dist",
+    "release": "npm run lint && np"
   },
   "dependencies": {
     "chalk": "^2.4.1",
@@ -30,7 +31,7 @@
     "yargs": "^11.0.0"
   },
   "devDependencies": {
-    "@tronite/eslint-config": "^1.0.0",
+    "@tronite/eslint-config": "^1.0.3",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
@@ -39,6 +40,7 @@
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.9.1"
+    "eslint-plugin-react": "^7.9.1",
+    "np": "^3.0.4"
   }
 }
