--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "dotenv": "^6.0.0",
+    "find-plugins": "^1.1.7",
     "ora": "^2.1.0",
     "webpack": "^4.12.0",
     "webpack-dev-server": "^3.1.4",
