--- a/examples/babel/package.json
+++ b/examples/babel/package.json
@@ -1,8 +1,13 @@
 {
+  "scripts": {
+    "build": "tronic build",
+    "start": "tronic"
+  },
   "dependencies": {
     "cowsay": "^1.3.1"
   },
   "devDependencies": {
-    "tronic": "latest"
+    "tronic": "latest",
+    "tronic-plugin-babel": "latest"
   }
 }
