--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "dotenv": "^6.0.0",
-    "node-modules-path": "^1.0.1",
+    "find-up": "^3.0.0",
     "require-if-exists": "^1.0.0",
     "webpack": "^4.12.0",
     "webpack-dev-server": "^3.1.4",
