--- a/examples/css/package.json
+++ b/examples/css/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "tronic": "latest",
-    "tronic-plugin-css": "latest"
+    "tronic-plugin-css": "latest",
+    "tronic-plugin-html": "latest"
   }
 }
