--- a/examples/sass/package.json
+++ b/examples/sass/package.json
@@ -5,6 +5,7 @@
   },
   "devDependencies": {
     "tronic": "latest",
+    "tronic-plugin-html": "latest",
     "tronic-plugin-sass": "latest"
   }
 }
