--- a/examples/babel/package.json
+++ b/examples/babel/package.json
@@ -4,10 +4,11 @@
     "start": "tronic"
   },
   "dependencies": {
-    "cowsay": "^1.3.1"
+    "cowsay-browser": "^1.1.8"
   },
   "devDependencies": {
     "tronic": "latest",
-    "tronic-plugin-babel": "latest"
+    "tronic-plugin-babel": "latest",
+    "tronic-plugin-html": "latest"
   }
 }
