--- a/examples/typescript/package.json
+++ b/examples/typescript/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "tronic": "latest",
+    "tronic-plugin-html": "latest",
     "tronic-plugin-typescript": "latest"
   }
 }
