--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "dependencies": {
     "dotenv": "^6.0.0",
-    "find-up": "^3.0.0",
+    "pkg-dir": "^3.0.0",
     "require-if-exists": "^1.0.0",
     "webpack": "^4.12.0",
     "webpack-dev-server": "^3.1.4",
@@ -33,7 +33,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "np": "^3.0.4",
-    "tronic-plugin-babel": "^1.0.4",
-    "tronic-plugin-eslint": "^1.0.3"
+    "tronic-plugin-babel": "^1.0.5",
+    "tronic-plugin-eslint": "^1.0.5"
   }
 }
