--- a/examples/babel/package.json
+++ b/examples/babel/package.json
@@ -7,7 +7,7 @@
     "cowsay-browser": "^1.1.8"
   },
   "devDependencies": {
-    "tronic": "latest",
+    "tronic": "../../",
     "tronic-plugin-babel": "latest",
     "tronic-plugin-html": "latest"
   }
