--- a/examples/css/package.json
+++ b/examples/css/package.json
@@ -4,7 +4,7 @@
     "start": "tronic"
   },
   "devDependencies": {
-    "tronic": "latest",
+    "tronic": "../../",
     "tronic-plugin-css": "latest",
     "tronic-plugin-html": "latest"
   }
