--- a/examples/html/package.json
+++ b/examples/html/package.json
@@ -4,7 +4,7 @@
     "start": "tronic"
   },
   "devDependencies": {
-    "tronic": "latest",
+    "tronic": "../../",
     "tronic-plugin-html": "latest"
   }
 }
