--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "babel-preset-react": "^6.24.1",
-    "tronic": "latest",
+    "tronic": "../../",
     "tronic-plugin-babel": "latest",
     "tronic-plugin-html": "latest"
   }
