--- a/examples/typescript/package.json
+++ b/examples/typescript/package.json
@@ -9,7 +9,7 @@
     "jquery": "^3.3.1"
   },
   "devDependencies": {
-    "tronic": "latest",
+    "tronic": "file:../../",
     "tronic-plugin-html": "latest",
     "tronic-plugin-typescript": "latest"
   }
