--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,7 @@
   "extends": "@tronite",
   "rules": {
     "import/no-mutable-exports": "off",
-    "no-console": "off"
+    "no-console": "off",
+    "no-param-reassign": "off"
   }
 }
