--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/tronite/tronic.git"
   },
   "scripts": {
-    "lint": "eslint src examples",
+    "lint": "eslint src",
     "prepare": "rm -rf dist && babel src -d dist",
     "release": "npm run lint && np"
   },
