--- a/examples/react/package.json
+++ b/examples/react/package.json
@@ -11,6 +11,7 @@
     "babel-preset-react": "^6.24.1",
     "tronic": "../../",
     "tronic-plugin-babel": "latest",
+    "tronic-plugin-eslint": "latest",
     "tronic-plugin-html": "latest"
   }
 }
